added in timeline avatar profile pic

--- a/index.html
+++ b/index.html
@@ -291,8 +291,9 @@
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
                             <p class="timeline__timeframe">Sep 2019 - Present</p>
-                            <h3>Convertium Pte Ltd</h3>
-                            <h5>Digital Technology Intern</h5>
+                            <img src="images/timeline_convertium.png" alt="Convertium Logo" class="timeline__avatar timeline__avatar_contain">
+                            <h3 class="timeline__withAvatar">Convertium Pte Ltd</h3>
+                            <h5 class="timeline__withAvatar">Digital Technology Intern</h5>
                         </div>
                         <div class="timeline__desc">
                             <p>As a Digital Technology Intern, I work and help on the Lexus International Brand & Marina Bay Sands as a
@@ -305,7 +306,9 @@
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
                             <p class="timeline__timeframe">Jul 2018 - Present</p>
-                            <h3>Freelance Photographer</h3>
+                            <img src="images/work-pf.jpg" alt="Jeremy Chan" class="timeline__avatar timeline__avatar_cover">
+                            <h3 class="timeline__withAvatar">Freelance Event Photographer</h3>
+                            <h5 class="timeline__withAvatar">Freelancer</h5>
                         </div>
                         <div class="timeline__desc">
                             <p>As a freelance photographer, my primary focus is on event photography. Event Photographer
@@ -333,8 +336,9 @@
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
                             <p class="timeline__timeframe">Apr 2017 - May 2020 (Expected)</p>
-                            <h3>Singapore Polytechnic</h3>
-                            <h5>Diploma Student</h5>
+                            <img src="images/timeline_SP.png" alt="Jeremy Chan" class="timeline__avatar timeline__avatar_contain">
+                            <h3 class="timeline__withAvatar">Singapore Polytechnic</h3 class="timeline__withAvatar">
+                            <h5 class="timeline__withAvatar">Diploma Student</h5>
                         </div>
                         <div class="timeline__desc">
                             <p>A three year Diploma Program with the School of Computing. Currently pursuing my Diploma
@@ -349,8 +353,9 @@
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
                             <p class="timeline__timeframe">Jan 2012 - Dec 2016</p>
-                            <h3>Methodist Boys' School Penang</h3>
-                            <h5>High School Student</h5>
+                            <img src="images/timeline_MBS.jpg" alt="Jeremy Chan" class="timeline__avatar timeline__avatar_cover">
+                            <h3 class="timeline__withAvatar">Methodist Boys' School Penang</h3>
+                            <h5 class="timeline__withAvatar">High School Student</h5>
                         </div>
                         <div class="timeline__desc">
                             <p>Graduated as the Head Prefect of 2016 and achieved 8A's and 1B+ for my Sijil Pelajaran
