added Convertium testimonial

--- a/index.html
+++ b/index.html
@@ -1115,10 +1115,10 @@
 
                 <div class="testimonials__slide">
                     <img src="http://placehold.it/150x150" alt="Author image" class="testimonials__avatar">
-                    <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
-                    Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel.</p>
+                    <p>Jeremy has gained confidence of work over the last few months with Convertium. He now is able to complete this task independently most of the time,
+                         asking the right questions when necessary and no doubt adding value not just to the tech team but company wide.</p>
                     <div class="testimonials__author h06">
-                        Sundar Pichai
+                        Pang Chen Yong
                         <span>Technology Director for Convertium Pte Ltd</span>
                     </div>
                 </div>
