--- a/404.html
+++ b/404.html
@@ -8,16 +8,19 @@
   <head>
     <!--- basic page needs
     ================================================== -->
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Jeremy Chan Tse Ee</title>
-    <meta name="keywords"  content="photography,portfolio,singapore,singaporepolytechnic,jeremychan,chantseee,jeremy,chan,tse,ee,tseee,ctecreatives,tzeee,tze, cteadeventure, jeremy chan co, coder, IT" />
-    <meta name="description" contegnt="Freelance Photographer and Information Technology Student from Singapore Polytechnic">
+    <meta name="keywords"
+        content="photography,portfolio,singapore,singaporepolytechnic,jeremychan,chantseee,jeremy,chan,tse,ee,tseee,ctecreatives,tzeee,tze, cteadeventure, jeremy chan co, coder, IT" />
+    <meta name="description" content="Freelance Photographer and Information Technology Student from Singapore Polytechnic">
     <meta name="author" content="Jeremy Chan Tse Ee">
     <meta name="application-name" content="Jeremy Chan Tse Ee Portfolio">
-    <meta property=og:title content="Jeremy Chan Tse Ee" />
-    <meta property=og:description content="Freelance Photographer, Student, Coder, Tuition Teacher and Information Technology Student from Singapore Polytechnic" />
+
+    <meta property="og:description" content="Freelance Photographer and Information Technology Student from Singapore Polytechnic" />
     <meta property="og:title" content="Jeremy Chan Tse Ee Portfolio">
-    <meta property="og:url" content="https://jeremychan.co">
+    <meta property="og:site_name" content="Jeremy Chan Tse Ee">
+    <meta property="og:url" content="http://jeremychan.co">
+    <meta property="og:type" content="website" />
     <!-- Thumbnail 1900 * 930 -->
     <meta property="og:image" content="http://jeremychan.co/images/thumbnail_1000.jpg">
     <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_1000.jpg" />
@@ -25,13 +28,11 @@
     <!-- Thumbnail 600 * 300 -->
     <meta property="og:image" content="http://jeremychan.co/images/thumbnail_600-300.jpg">
     <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_600-300.jpg" />
-    <meta property="og:image:width" content="600" />
-    <meta property="og:image:height" content="295" />
+    <meta property="og:image:height" content="600" />
     <!-- Thumbnail Square -->
     <meta property="og:image" content="http://jeremychan.co/images/thumbnail_square-80.jpg">
     <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_square-80.jpg" />
-    <meta property="og:image:width" content="80" />
-    <meta property="og:image:height" content="105" />
+    <meta property="og:image:height" content="100" />
 
     <!-- mobile specific metas
     ================================================== -->
