--- a/index.html
+++ b/index.html
@@ -29,13 +29,11 @@
     <!-- Thumbnail 600 * 300 -->
     <meta property="og:image" content="http://jeremychan.co/images/thumbnail_600-300.jpg">
     <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_600-300.jpg" />
-    <meta property="og:image:width" content="600" />
-    <meta property="og:image:height" content="295" />
+    <meta property="og:image:height" content="600" />
     <!-- Thumbnail Square -->
     <meta property="og:image" content="http://jeremychan.co/images/thumbnail_square-80.jpg">
     <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_square-80.jpg" />
-    <meta property="og:image:width" content="80" />
-    <meta property="og:image:height" content="105" />
+    <meta property="og:image:height" content="100" />
 
 
 
@@ -1114,7 +1112,7 @@
                 </div>
 
                 <div class="testimonials__slide">
-                    <img src="http://placehold.it/150x150" alt="Author image" class="testimonials__avatar">
+                    <img src="images/ref_pang.jpg" alt="Author image" class="testimonials__avatar">
                     <p>Jeremy has gained confidence of work over the last few months with Convertium. He now is able to complete this task independently most of the time,
                          asking the right questions when necessary and no doubt adding value not just to the tech team but company wide.</p>
                     <div class="testimonials__author h06">
