--- a/404.html
+++ b/404.html
@@ -19,10 +19,14 @@
     <meta property="og:title" content="Jeremy Chan Tse Ee Portfolio">
     <meta property="og:url" content="https://jeremychan.co">
     <!-- Thumbnail 1900 * 930 -->
+    <meta property="og:image" content="http://jeremychan.co/images/thumbnail_original.jpg">
+    <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_original.jpg" />
+    <meta property="og:image:height" content="1800" />
+    <!-- Thumbnail 1000 -->
     <meta property="og:image" content="http://jeremychan.co/images/thumbnail_1000.jpg">
     <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_1000.jpg" />
     <meta property="og:image:height" content="1000" />
-    <!-- Thumbnail 600 * 300 -->
+    <!-- Thumbnail 600 -->
     <meta property="og:image" content="http://jeremychan.co/images/thumbnail_600-300.jpg">
     <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_600-300.jpg" />
     <meta property="og:image:height" content="600" />
