--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
     <meta property="og:url" content="http://jeremychan.co">
     <meta property="og:type" content="website" />
     <!-- Thumbnail 1900 * 930 -->
+    <meta property="og:image" content="http://jeremychan.co/images/thumbnail_original.jpg">
+    <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_original.jpg" />
+    <meta property="og:image:height" content="1800" />
+    <!-- Thumbnail 1000 -->
     <meta property="og:image" content="http://jeremychan.co/images/thumbnail_1000.jpg">
     <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_1000.jpg" />
     <meta property="og:image:height" content="1000" />
-    <!-- Thumbnail 600 * 300 -->
+    <!-- Thumbnail 600 -->
     <meta property="og:image" content="http://jeremychan.co/images/thumbnail_600-300.jpg">
     <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_600-300.jpg" />
     <meta property="og:image:height" content="600" />
