--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <meta property="og:image" content="http://jeremychan.co/images/thumbnail_600-300.jpg">
     <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_600-300.jpg" />
     <meta property="og:image:height" content="600" />
+    <!-- Thumbnail 256 -->
+    <meta property="og:image" content="http://jeremychan.co/images/thumbnail_256.jpg">
+    <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_256.jpg" />
+    <meta property="og:image:height" content="256" />
     <!-- Thumbnail Square -->
     <meta property="og:image" content="http://jeremychan.co/images/thumbnail_square-80.jpg">
     <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_square-80.jpg" />
