modified JSON-LD Markup version 2

--- a/index.html
+++ b/index.html
@@ -124,18 +124,9 @@
             "@type" : "Person",
             "name" : "Jeremy Chan"
           },
-          "articleBody" : "Hello there!"
-        }, {
-          "@context" : "http://schema.org",
-          "@type" : "Article",
-          "name" : "Jeremy Chan Tse Ee Portfolio",
-          "author" : {
-            "@type" : "Person",
-            "name" : "Jeremy Chan"
-          },
           "articleSection" : "I am Jeremy Chan",
           "articleBody" : "I am a programmer, <BR/>\n                    photographer\n                    &amp; student <BR/>\n                    based in Singapore.",
-          "url" : "https://jeremychan.co/#works"
+          "url" : "https://jeremychan.co/"
         }, {
           "@context" : "http://schema.org",
           "@type" : "Article",
@@ -167,37 +158,6 @@
           },
           "articleSection" : "Photography Work",
           "articleBody" : "Check out my latest photos</H1>\n\n                <P class=\"lead2\">Whether you are in a family outing, at a birthday party or at an event.\n                    There are moments you wish you had a camera and capture the unforgettable.\n                    On your event day, I will be there to capture great big giant moments worth remembering forever\n                    like the time you first held your son&#39;s one-year-old birthday party.\n                    I&#39;ll be there to capture the little tiny moments like slicing your 21st birthday cake.\n                    Your event day is made of big and small moments.\n                    For me, it&#39;s not about creating the images but capturing the moments that matter to you.\n                    Photos that remind you how you felt in that moment.\n                    As a photographer, I&#39;ll be working side by side with you ensuring that on your event day, you&#39;re\n                    covered.\n                    My goal is to give you the least hassle and allow you to live the moments on your event day.\n                    Below are some of my past experiences. Take the time to enjoy and let the pictures do the talking."
-        }, {
-          "@context" : "http://schema.org",
-          "@type" : "Article",
-          "name" : "Jeremy Chan Tse Ee Portfolio",
-          "author" : {
-            "@type" : "Person",
-            "name" : "Jeremy Chan"
-          },
-          "articleSection" : "Projects",
-          "articleBody" : "See my latest projects.</H1>\n\n                <P class=\"lead\">\n                    Over the past three years, I picked up numerous programming languages, design thinking skills and\n                    created a few business ideas.\n                    With all of these new learning skills, I implemented, coded and designed several projects. Check\n                    them out below."
-        }, {
-          "@context" : "http://schema.org",
-          "@type" : "Article",
-          "name" : "Jeremy Chan Tse Ee Portfolio",
-          "author" : {
-            "@type" : "Person",
-            "name" : "Jeremy Chan"
-          },
-          "articleSection" : "Journal",
-          "articleBody" : "When I&#39;m not rushing my projects</H1>\n                <P class=\"lead\">Below is a compilation of my personal reflections and thoughts of life, work, play and\n                    more!",
-          "url" : "https://jeremychan.co/blog/blog.html"
-        }, {
-          "@context" : "http://schema.org",
-          "@type" : "Article",
-          "name" : "Jeremy Chan Tse Ee Portfolio",
-          "author" : {
-            "@type" : "Person",
-            "name" : "Jeremy Chan"
-          },
-          "articleSection" : "Contact Me",
-          "articleBody" : "Tell Me Something Good!"
         } ]
         </script>
         <!-- End JSON-LD Markup Structured Data -->
