--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8" />
-    <title>Jeremy Chan Tse Ee</title>
+    <title>Jeremy Chan Tse Ee vCard</title>
     <meta name="keywords"  content="photography,portfolio,singapore,singaporepolytechnic,jeremychan,chantseee,jeremy,chan,tse,ee,tseee,ctecreatives,tzeee,tze, cteadeventure, jeremy chan co, coder, IT" />
     <meta name="description" contegnt="Freelance Photographer and Information Technology Student from Singapore Polytechnic">
     <meta name="author" content="Jeremy Chan Tse Ee">
