--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,6 @@
 
     </section> <!-- end works -->
 
-
     <!-- blog
     ================================================== -->
     <section id="blog" class="s-blog target-section">
@@ -1369,11 +1368,11 @@
             <div class="col-four tab-full contact__infos">
                 <h4 class="h06">Phone</h4>
                 <p>Mobile: <br />
-                    <a href="tel:+6592719862">(+65) 9261 9862</a><br>
+                    <a href="tel:+6583629747">(+65) 8362 9747</a><br>
                 </p>
 
                 <h4 class="h06">Email</h4>
-                <p><a href="mailto:me@jeremychan.co">me@jeremychan.co</a>
+                <p><a href="mailto:jeremychantseee@gmail.com">jeremychantseee@gmail.com</a>
                 </p>
             </div>
 
@@ -1469,9 +1468,9 @@
 
     </div><!-- end photoSwipe background -->
 
-    <div id="preloader">
+    <!-- <div id="preloader">
         <div id="loader"></div>
-    </div>
+    </div> -->
 
 
     <!-- Java Script
