required subject message for form submission

--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
                         </div>
                         <div class="form-field">
                             <input name="contactSubject" aria-label="Contact Subject" type="text" id="contactSubject" placeholder="Subject" value=""
-                                class="full-width">
+                            required="" aria-required="true" aria-label="Contact Subject" class="full-width">
                         </div>
                         <div class="form-field">
                             <textarea name="contactMessage" id="contactMessage" placeholder="Message" rows="10"
