added in local PDF, change hp no, remove loading bar, change email to cte.jeremy@gmail.com

--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
                 <p>I am a self taught photographer and currently living in Singapore.
                     I am available for <strong style="color: #000;">freelance work</strong> (Event Photography) and
                     <strong style="color: #000;">teaching coding lessons</strong>.
-                    Currently, I am pursuing a Diploma in Information Technology at the School of Computing, Singapore
-                    Polytechnic.
+                    Currently, I will be pursuing a Business Analytics Undergraduate Degree at the School of Computing, National University of Singapore. 
+                    I was a Singapore Polytechnic merit graduate with a Diploma in Information Technology where I graduate top 5% of my cohort.
                     In my freetime, I love binge watching Netflix, reading newspaper/Medium articles and oh hey, I love
                     dogs too!</p>
                 <p>
@@ -342,7 +342,7 @@
                 <div class="row about-content--buttons">
 
                     <div class="col-full tab-full">
-                        <a href="http://bit.ly/2maavWk" target="_blank" rel="noopener"
+                        <a href="https://jeremychan.co/public-content/downloads/JeremyChanTseEe_Resume.pdf" target="_blank" rel="noopener"
                             class="btn btn--primary full-width">Download My CV</a>
                     </div>
 
@@ -1175,6 +1175,9 @@
         <div class="row blog-content">
             <div class="col-full">
 
+                <blockquote class="embedly-card"><h4><a href="https://medium.com/@Jeremycte/my-favourite-productivity-apps-i-cant-live-without-18f55d884e80">My Favourite Productivity Apps I Can't Live Without</a></h4><p>Seriously, without these apps, I don't think I would ever be this efficient as I have been. Over the years and numerous tries of multiple apps to increase my productivity, I've found these few apps fitting and complement my note-taking, reminders, to-do lists, journaling and daily planning.</p></blockquote>
+                <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+
                 <div class="blog-list block-1-2 block-tab-full">
                     <article class="col-block">
 
@@ -1292,7 +1295,7 @@
     <!-- Start embed -->
     <!-- <div id="retainable-rss-embed"
         data-rss="https://medium.com/feed/retainable,
-        https://medium.com/feed/js-dojo,https://medium.com/@Jeremycte/someone-once-told-me-that-imagination-is-limitless-and-that-s-true-93aea0e668c1"
+        https://medium.com/@Jeremycte/my-favourite-productivity-apps-i-cant-live-without-18f55d884e80"
         data-maxcols="4"
         data-layout="slider"
         data-poststyle="modal"
@@ -1368,11 +1371,11 @@
             <div class="col-four tab-full contact__infos">
                 <h4 class="h06">Phone</h4>
                 <p>Mobile: <br />
-                    <a href="tel:+6583629747">(+65) 8362 9747</a><br>
+                    <a href="tel:+6592719862">(+65) 9271 9862</a><br>
                 </p>
 
                 <h4 class="h06">Email</h4>
-                <p><a href="mailto:jeremychantseee@gmail.com">jeremychantseee@gmail.com</a>
+                <p><a href="mailto:cte.jeremy@gmail.com">cte.jeremy@gmail.com</a>
                 </p>
             </div>
 
