--- a/404.html
+++ b/404.html
@@ -19,20 +19,24 @@
     <meta property="og:title" content="Jeremy Chan Tse Ee Portfolio">
     <meta property="og:url" content="https://jeremychan.co">
     <!-- Thumbnail 1900 * 930 -->
-    <meta property="og:image" content="http://jeremychan.co/images/thumbnail_original.jpg">
-    <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_original.jpg" />
-    <meta property="og:image:height" content="1800" />
+    <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357437/thumbnail_1600_u6rmxx.png">
+    <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte/image/upload/v1593357437/thumbnail_1600_u6rmxx.png" />
+    <meta property="og:image:height" content="1600" />
     <!-- Thumbnail 1000 -->
-    <meta property="og:image" content="http://jeremychan.co/images/thumbnail_1000.jpg">
-    <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_1000.jpg" />
+    <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357367/thumbnail_1000_xjk7pd.jpg">
+    <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte/image/upload/v1593357367/thumbnail_1000_xjk7pd.jpg" />
     <meta property="og:image:height" content="1000" />
     <!-- Thumbnail 600 -->
-    <meta property="og:image" content="http://jeremychan.co/images/thumbnail_600-300.jpg">
-    <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_600-300.jpg" />
+    <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357373/thumbnail_600-300_deozbl.jpg">
+    <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte/image/upload/v1593357373/thumbnail_600-300_deozbl.jpg" />
     <meta property="og:image:height" content="600" />
+    <!-- Thumbnail 256 -->
+    <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357365/thumbnail_256_tnzyhh.jpg">
+    <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte/image/upload/v1593357365/thumbnail_256_tnzyhh.jpg" />
+    <meta property="og:image:height" content="256" />
     <!-- Thumbnail Square -->
-    <meta property="og:image" content="http://jeremychan.co/images/thumbnail_square-80.jpg">
-    <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_square-80.jpg" />
+    <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357365/thumbnail_square-80_mogdli.jpg">
+    <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte/image/upload/v1593357365/thumbnail_square-80_mogdli.jpg" />
     <meta property="og:image:height" content="100" />
 
     <!-- mobile specific metas
@@ -49,6 +53,14 @@
     ================================================== -->
     <script src="https://jeremychan.co/js/modernizr.js"></script>
     <script src="https://jeremychan.co/js/pace.min.js"></script>
+
+    <!--font
+    ================================================== -->
+    <link rel="preload" href="/fonts/montserrat/montserrat-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/montserrat/montserrat-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/montserrat/montserrat-medium-webfont.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/montserrat/montserrat-bold-webfont.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/montserrat/montserrat-extrabold-webfont.woff2" as="font" type="font/woff2" crossorigin>
 
     <!-- favicons
     ================================================== -->
@@ -121,7 +133,7 @@
       id="home"
       class="s-home page-hero target-section"
       data-parallax="scroll"
-      data-image-src="https://jeremychan.co/images/DSC8983.jpg"
+      data-image-src="https://res.cloudinary.com/jeremycte/image/upload/q_auto:eco/v1593355902/DSC8983.jpg"
       data-natural-width="3000"
       data-natural-height="2000"
       data-position-y="center"
