added in cloudinary and font-display

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="https://jeremychan.co"><img src="images/logo.png" alt="Jeremy Chan Hero Image"></a>
+            <a class="site-logo" href="https://jeremychan.co"><img src="https://res.cloudinary.com/jeremycte/image/upload/q_auto:good/v1593359802/logo.png" alt="Jeremy Chan Hero Image"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -199,7 +199,7 @@
    ================================================== -->
     <section id="home" class="s-home page-hero target-section" 
     data-parallax="scroll"
-        data-image-src="https://res.cloudinary.com/jeremycte/image/upload/v1593355918/hero-bg.jpg" 
+        data-image-src="https://res.cloudinary.com/jeremycte/image/upload/q_auto:eco/v1593355918/hero-bg.jpg" 
         data-image-alt="hero-bg" 
         alt="hero-bg" 
         data-natural-width=3000 
@@ -278,13 +278,13 @@
 
             <div class="col-six tab-full">
 
-                <img src="https://res.cloudinary.com/jeremycte/image/upload/q_auto:good/v1593355907/work-pf.jpg" alt="work-pf">
+                <img src="https://res.cloudinary.com/jeremycte/image/upload/q_auto:low/v1593355907/work-pf.jpg" alt="work-pf">
 
             </div>
 
             <div class="col-six tab-full">
 
-                <img src="https://res.cloudinary.com/jeremycte/image/upload/q_auto:eco/v1593355913/christmas-pf.jpg" alt="christmas-pf">
+                <img src="https://res.cloudinary.com/jeremycte/image/upload/q_auto:low/v1593355913/christmas-pf.jpg" alt="christmas-pf">
 
             </div>
 
@@ -804,8 +804,8 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-valen.jpg" class="thumb-link" data-size="1280x853">
-                                <img src="https://res.cloudinary.com/jeremycte/image/upload/q_auto:eco/v1593357709/g-valen_tn_jfdxuq.jpg"
-                                    srcset="https://res.cloudinary.com/jeremycte/image/upload/q_auto:eco/v1593357709/g-valen_tn_jfdxuq.jpg 1x, https://res.cloudinary.com/jeremycte/image/q_auto:eco/upload/v1593357709/g-valen_tn_jfdxuq.jpg 2x"
+                                <img src="https://res.cloudinary.com/jeremycte/image/upload/q_auto:good/v1593357709/g-valen_tn.jpg"
+                                    srcset="https://res.cloudinary.com/jeremycte/image/upload/q_auto:good/v1593357709/g-valen_tn.jpg 1x, https://res.cloudinary.com/jeremycte/image/upload/q_auto:good/v1593357709/g-valen_tn.jpg 2x"
                                     alt="Valen swimming and laughing">
                                 <span class="shadow-overlay"></span>
                             </a>
