removed extra og:image for solving og:image problem and changed og:description to NUS student

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <meta charset="utf-8">
     <title>Jeremy Chan Tse Ee</title>
     <meta name="keywords"
-        content="photography,portfolio,singapore,singaporepolytechnic,jeremychan,chantseee,jeremy,chan,tse,ee,tseee,ctecreatives,tzeee,tze, cteadeventure, jeremy chan co, coder, IT" />
-    <meta name="description" content="Freelance Photographer and Information Technology Student from Singapore Polytechnic">
+        content="NUS, national university of singapore, chan tse ee,photography,portfolio,singapore,singaporepolytechnic,jeremychan,chantseee,jeremy,chan,tse,ee,tseee,ctecreatives,tzeee,tze, cteadeventure, jeremy chan co, coder, IT" />
+    <meta name="description" content="Undergraduate Business Analytics student at the National University of Singapore">
     <meta name="author" content="Jeremy Chan Tse Ee">
     <meta name="application-name" content="Jeremy Chan Tse Ee Portfolio">
 
-    <meta property="og:description" content="Freelance Photographer and Information Technology Student from Singapore Polytechnic" />
+    <meta property="og:description" content="Undergraduate Business Analytics student at the National University of Singapore" />
     <meta property="og:title" content="Jeremy Chan Tse Ee Portfolio">
     <meta property="og:site_name" content="Jeremy Chan Tse Ee">
     <meta property="og:url" content="http://jeremychan.co">
@@ -34,14 +34,6 @@
     <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357373/thumbnail_600-300_deozbl.jpg">
     <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte/image/upload/v1593357373/thumbnail_600-300_deozbl.jpg" />
     <meta property="og:image:height" content="600" />
-    <!-- Thumbnail 256 -->
-    <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357365/thumbnail_256_tnzyhh.jpg">
-    <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte/image/upload/v1593357365/thumbnail_256_tnzyhh.jpg" />
-    <meta property="og:image:height" content="256" />
-    <!-- Thumbnail Square -->
-    <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357365/thumbnail_square-80_mogdli.jpg">
-    <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte/image/upload/v1593357365/thumbnail_square-80_mogdli.jpg" />
-    <meta property="og:image:height" content="100" />
 
 
     <!-- mobile specific metas
