moved my domain to jeremycte.com which needs to change redirection of all links from jeremychan.co to jeremycte.com

--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
     <meta property=og:title content="Jeremy Chan Tse Ee" />
     <meta property=og:description content="Undergraduate Business Analytics student at the National University of Singapore" />
     <meta property="og:title" content="Jeremy Chan Tse Ee Portfolio">
-    <meta property="og:url" content="https://jeremychan.co">
+    <meta property="og:url" content="https://jeremycte.com">
     <!-- Thumbnail 1900 * 930 -->
     <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357437/thumbnail_1600_u6rmxx.png">
     <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte/image/upload/v1593357437/thumbnail_1600_u6rmxx.png" />
@@ -45,14 +45,14 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="https://jeremychan.co/css/base.css" />
-    <link rel="stylesheet" href="https://jeremychan.co/css/vendor.css" />
-    <link rel="stylesheet" href="https://jeremychan.co/css/main.css" />
+    <link rel="stylesheet" href="https://jeremycte.com/css/base.css" />
+    <link rel="stylesheet" href="https://jeremycte.com/css/vendor.css" />
+    <link rel="stylesheet" href="https://jeremycte.com/css/main.css" />
 
     <!-- script
     ================================================== -->
-    <script src="https://jeremychan.co/js/modernizr.js"></script>
-    <script src="https://jeremychan.co/js/pace.min.js"></script>
+    <script src="https://jeremycte.com/js/modernizr.js"></script>
+    <script src="https://jeremycte.com/js/pace.min.js"></script>
 
     <!--font
     ================================================== -->
@@ -64,8 +64,8 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="shortcut icon" href="https://jeremychan.co/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="https://jeremychan.co/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://jeremycte.com/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="https://jeremycte.com/favicon.ico" type="image/x-icon" />
 
     <!-- Google Analytics
     ================================================== -->
@@ -80,7 +80,7 @@
       </script>
       <!-- End Google Analytics -->
       
-    <!-- Facebook Pixel Code for www.jeremychan.co
+    <!-- Facebook Pixel Code for www.jeremycte.com
     ================================================== -->
     <script>
       !function(f,b,e,v,n,t,s)
@@ -105,21 +105,21 @@
     ================================================== -->
     <header class="s-header">
       <div class="header-logo">
-        <a class="site-logo" href="https://jeremychan.co/"
-          ><img src="https://jeremychan.co/images/logo.png" alt="Homepage"
+        <a class="site-logo" href="https://jeremycte.com/"
+          ><img src="https://jeremycte.com/images/logo.png" alt="Homepage"
         /></a>
       </div>
 
       <nav class="header-nav-wrap">
         <ul class="header-nav">
-          <li><a href="https://jeremychan.co/#home" title="home">Home</a></li>
-          <li><a href="https://jeremychan.co/#about" title="about">About</a></li>
-          <li><a href="https://jeremychan.co/#works" title="works">Works</a></li>
+          <li><a href="https://jeremycte.com/#home" title="home">Home</a></li>
+          <li><a href="https://jeremycte.com/#about" title="about">About</a></li>
+          <li><a href="https://jeremycte.com/#works" title="works">Works</a></li>
           <li>
-            <a href="https://jeremychan.co/#project" title="project">Projects</a>
+            <a href="https://jeremycte.com/#project" title="project">Projects</a>
           </li>
-          <li class="current"><a href="https://jeremychan.co/blog/blog.html" title="blog">Blog</a></li>
-          <li><a href="https://jeremychan.co/#contact" title="contact">Contact</a></li>
+          <li class="current"><a href="https://jeremycte.com/blog/blog.html" title="blog">Blog</a></li>
+          <li><a href="https://jeremycte.com/#contact" title="contact">Contact</a></li>
         </ul>
       </nav>
 
@@ -209,8 +209,8 @@
     <!-- Java Script
     ================================================== -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://jeremychan.co/js/plugins.js"></script>
-    <script src="https://jeremychan.co/js/main.js"></script>
+    <script src="https://jeremycte.com/js/plugins.js"></script>
+    <script src="https://jeremycte.com/js/main.js"></script>
     <script>
       var year = new Date().getFullYear();
       var label = "© COPYRIGHT " + year +" JEREMY CHAN";
