--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="Undergraduate Business Analytics student at the National University of Singapore" />
     <meta property="og:title" content="Jeremy Chan Tse Ee Portfolio">
     <meta property="og:site_name" content="Jeremy Chan Tse Ee">
-    <meta property="og:url" content="http://jeremychan.co">
+    <meta property="og:url" content="http://jeremycte.com">
     <meta property="og:type" content="website" />
     <!-- Thumbnail 1900 * 930 -->
     <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357437/thumbnail_1600_u6rmxx.png">
@@ -48,7 +48,6 @@
 
     <!-- script
     ================================================== -->
-    <script src="js/lazysizes.min.js" async=""></script>
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
 
@@ -80,7 +79,7 @@
     </script>
     <!-- End Google Analytics -->
 
-    <!-- Hotjar Tracking Code for www.jeremychan.co
+    <!-- Hotjar Tracking Code for www.jeremycte.com
     ================================================== -->
     <script>
         (function(h,o,t,j,a,r){
@@ -93,7 +92,7 @@
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
 
-    <!-- Facebook Pixel Code for www.jeremychan.co
+    <!-- Facebook Pixel Code for www.jeremycte.com
     ================================================== -->
     <script>
         !function(f,b,e,v,n,t,s)
@@ -112,7 +111,7 @@
     /></noscript>
     <!-- End Facebook Pixel Code -->
 
-    <!-- JSON-LD Markup Structured Data for www.jeremychan.co
+    <!-- JSON-LD Markup Structured Data for www.jeremycte.com
     ================================================== -->
     <script type="application/ld+json">
         [ {
@@ -125,7 +124,7 @@
           },
           "articleSection" : "I am Jeremy Chan",
           "articleBody" : "I am a programmer, <BR/>\n                    photographer\n                    &amp; student <BR/>\n                    based in Singapore.",
-          "url" : "https://jeremychan.co/"
+          "url" : "https://jeremycte.com/"
         }, {
           "@context" : "http://schema.org",
           "@type" : "Article",
@@ -136,7 +135,7 @@
           },
           "articleSection" : "I am Jeremy Chan",
           "articleBody" : "I am a programmer, <BR/>\n                    photographer\n                    &amp; student <BR/>\n                    based in Singapore.",
-          "url" : "https://jeremychan.co/#about"
+          "url" : "https://jeremycte.com/#about"
         }, {
           "@context" : "http://schema.org",
           "@type" : "Article",
@@ -169,7 +168,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="https://jeremychan.co"><img src="https://res.cloudinary.com/jeremycte/image/upload/q_auto:good/v1593359802/logo.png" alt="Jeremy Chan Hero Image"></a>
+            <a class="site-logo" href="https://jeremycte.com"><img src="https://res.cloudinary.com/jeremycte/image/upload/q_auto:good/v1593359802/logo.png" alt="Jeremy Chan Hero Image"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -346,7 +345,7 @@
                 <div class="row about-content--buttons">
 
                     <div class="col-full tab-full">
-                        <a href="https://jeremychan.co/public-content/downloads/JeremyChanTseEe_Resume.pdf" target="_blank" rel="noopener"
+                        <a href="https://jeremycte.com/public-content/downloads/JeremyChanTseEe_Resume.pdf" target="_blank" rel="noopener"
                             class="btn btn--primary full-width">Download My CV</a>
                     </div>
 
@@ -1516,6 +1515,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.min.js"></script>
+    <script src="js/lazysizes.min.js" async=""></script>
     <script>
     var year = new Date().getFullYear();
     var label = "© COPYRIGHT " + year +" JEREMY CHAN";
