changed email & HP from text to image to prevent spamming of email

--- a/index.html
+++ b/index.html
@@ -1405,11 +1405,11 @@
             <div class="col-four tab-full contact__infos">
                 <h4 class="h06">Phone</h4>
                 <p>Mobile: <br />
-                    <a href="tel:+6592719862">(+65) 9271 9862</a><br>
+                    <img src="images/+6592719862.png" style="width: 39%"><br>
                 </p>
 
                 <h4 class="h06">Email</h4>
-                <p><a href="mailto:cte.jeremy@gmail.com">cte.jeremy@gmail.com</a>
+                <p><img src="images/cte.jeremygmail.png" style="width: 61%;">
                 </p>
             </div>
 
