--- a/404.html
+++ b/404.html
@@ -19,24 +19,20 @@
     <meta property="og:title" content="Jeremy Chan Tse Ee Portfolio">
     <meta property="og:url" content="https://jeremycte.com">
     <!-- Thumbnail 1900 * 930 -->
-    <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357437/thumbnail_1600_u6rmxx.png">
-    <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte/image/upload/v1593357437/thumbnail_1600_u6rmxx.png" />
+    <meta property="og:image" content="http://res.cloudinary.com/jeremycte23/image/upload/v1628665746/jeremyctewebsite/thumbnail_1600_yqtyus.png">
+    <meta property="og:image:secure" content="https://res.cloudinary.com/jeremycte23/image/upload/v1628665746/jeremyctewebsite/thumbnail_1600_yqtyus.png" />
     <meta property="og:image:height" content="1600" />
     <!-- Thumbnail 1000 -->
-    <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357367/thumbnail_1000_xjk7pd.jpg">
-    <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte/image/upload/v1593357367/thumbnail_1000_xjk7pd.jpg" />
+    <meta property="og:image" content="http://res.cloudinary.com/jeremycte23/image/upload/v1628665746/jeremyctewebsite/thumbnail_1000_ohzxz3.jpg">
+    <meta property="og:image:secure" content="https://res.cloudinary.com/jeremycte23/image/upload/v1628665746/jeremyctewebsite/thumbnail_1000_ohzxz3.jpg" />
     <meta property="og:image:height" content="1000" />
     <!-- Thumbnail 600 -->
-    <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357373/thumbnail_600-300_deozbl.jpg">
-    <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte/image/upload/v1593357373/thumbnail_600-300_deozbl.jpg" />
+    <meta property="og:image" content="http://res.cloudinary.com/jeremycte23/image/upload/v1628665746/jeremyctewebsite/thumbnail_600-300_v0oh2q.jpg">
+    <meta property="og:image:secure" content="https://res.cloudinary.com/jeremycte23/image/upload/v1628665746/jeremyctewebsite/thumbnail_600-300_v0oh2q.jpg" />
     <meta property="og:image:height" content="600" />
-    <!-- Thumbnail 256 -->
-    <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357365/thumbnail_256_tnzyhh.jpg">
-    <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte/image/upload/v1593357365/thumbnail_256_tnzyhh.jpg" />
-    <meta property="og:image:height" content="256" />
     <!-- Thumbnail Square -->
-    <meta property="og:image" content="http://res.cloudinary.com/jeremycte/image/upload/v1593357365/thumbnail_square-80_mogdli.jpg">
-    <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte/image/upload/v1593357365/thumbnail_square-80_mogdli.jpg" />
+    <meta property="og:image" content="http://res.cloudinary.com/jeremycte23/image/upload/v1628665746/jeremyctewebsite/thumbnail_square-80_ccsdkw.jpg">
+    <meta property="og:image:secure_url" content="https://res.cloudinary.com/jeremycte23/image/upload/v1628665746/jeremyctewebsite/thumbnail_square-80_ccsdkw.jpg" />
     <meta property="og:image:height" content="100" />
 
     <!-- mobile specific metas
@@ -133,7 +129,7 @@
       id="home"
       class="s-home page-hero target-section"
       data-parallax="scroll"
-      data-image-src="https://res.cloudinary.com/jeremycte/image/upload/q_auto:eco/v1593355902/DSC8983.jpg"
+      data-image-src="https://res.cloudinary.com/jeremycte23/image/upload/q_auto:eco/v1628665747/jeremyctewebsite/DSC8983_b80s8g.jpg"
       data-natural-width="3000"
       data-natural-height="2000"
       data-position-y="center"
