added in Adobe XD Prototype Link

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>More About Me</h1>
-                <p class="lead">Born in Penang, the Pearl of the Orient. <br>
+                <p class="lead">Grew up in Penang, the Pearl of the Orient. <br>
                     Passionate for leveraging technology to address real-world problems. </p>
             </div>
         </div>
@@ -379,7 +379,7 @@
                                 • Oversee the overall progress and aspect of all DSC external projects.<br> 
                                 • Set the direction and goals of the external team and the club.<br>
                                 • Build long lasting relationships with our existing Non-profit organisation.
-                                <br>https://dsc.comp.nus.edu.sg/
+                                <br>https://gdsc.community.dev/national-university-of-singapore/
                             </p>
                         </div>
                     </div> <!-- end timeline__block -->
@@ -1007,7 +1007,7 @@
                                 data-size="700x1050">
                                 <img src="https://res.cloudinary.com/jeremycte23/image/upload/q_auto:low/v1628667289/jeremyctewebsite/g-emcc_tn_jxjdfo.jpg"
                                     srcset="https://res.cloudinary.com/jeremycte23/image/upload/q_auto:low/v1628667289/jeremyctewebsite/g-emcc_tn_jxjdfo.jpg 1x,
-                                    hhttps://res.cloudinary.com/jeremycte23/image/upload/q_auto:low/v1628667289/jeremyctewebsite/g-emcc_tn_jxjdfo.jpg 2x"
+                                    https://res.cloudinary.com/jeremycte23/image/upload/q_auto:low/v1628667289/jeremyctewebsite/g-emcc_tn_jxjdfo.jpg 2x"
                                     alt="ExxonMobil Campus Concert Crew"
                                     class="lazyload">
                                 <span class="shadow-overlay"></span>
@@ -1260,7 +1260,8 @@
                                 In this project, my team focuses and applyed the design thinking process to provide the
                                 best user experience through user research (interviews),
                                 ideation, multiple prototypes and usability tests. This project enabled us to learn and
-                                understand first hand of the importance of user experience (UX).
+                                understand first hand of the importance of user experience (UX). <a target="_Blank" rel="noopener"
+                                href="https://xd.adobe.com/view/f7671b02-edf7-4537-5373-af04206a0b37-8156/">UX Prototype Adobe XD</a>
                             </p>
                         </span>
 
@@ -1332,7 +1333,7 @@
                                 There was over 900+ active views for the website over the course of just 1 month. 
                                 More information about this project can be found on my <a target="_Blank" rel="noopener"
                                 href="https://github.com/jeremycte">Github</a> or view the live site <a target="_Blank" rel="noopener"
-                                href="https://nuscomputingfreshmankit.surge.sh/">here</a>
+                                href="https://nuscomputingfreshmankit.surge.sh/">NUS Computing Website</a>
                             </p>
                         </span>
 
@@ -1560,11 +1561,13 @@
             <div class="col-four tab-full contact__infos">
                 <h4 class="h06">Phone</h4>
                 <p>Mobile: <br />
-                    <img src="https://res.cloudinary.com/jeremycte23/image/upload/q_auto:eco/v1628665747/jeremyctewebsite/phonenumber_wfhwdm.png" style="width: 39%"><br>
+                    <img src="https://res.cloudinary.com/jeremycte23/image/upload/q_auto:eco/v1628665747/jeremyctewebsite/phonenumber_wfhwdm.png" 
+                    alt="Jeremy CTE Phone Number" style="width: 39%"><br>
                 </p>
 
                 <h4 class="h06">Email</h4>
-                <p><img src="https://res.cloudinary.com/jeremycte23/image/upload/q_auto:eco/v1628665746/jeremyctewebsite/ctegmail_xvq9fw.png" style="width: 61%;">
+                <p><img src="https://res.cloudinary.com/jeremycte23/image/upload/q_auto:eco/v1628665746/jeremyctewebsite/ctegmail_xvq9fw.png" 
+                    alt="Jeremy CTE Email Address" style="width: 61%;">
                 </p>
             </div>
 
