added in alfresco

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <h3>About</h3>
                 <h1>More About Me</h1>
                 <p class="lead">Grew up in Penang, the Pearl of the Orient. <br>
-                    Passionate for leveraging technology and data to address real-world problems. </p>
+                    Passionate on leveraging technology and data to address real-world problems. </p>
             </div>
         </div>
 
@@ -1014,6 +1014,41 @@
                             <p>
                                 Created an interactive resume <a target="_Blank" rel="noopener"
                                 href="https://public.tableau.com/app/profile/jeremycte/viz/JeremyInteractiveResume/JeremyCV">Tableau Public</a>
+                            </p>
+                        </span>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
+
+                <div class="masonry__brick">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/projects/p-AlFresco_Logo.png" class="thumb-link lazyload" data-size="1200x1200">
+                                <img src="images/portfolio/projects/p-AlFresco_Logo.png"
+                                    srcset="images/portfolio/projects/p-AlFresco_Logo.png 1x, images/portfolio/projects/p-AlFresco_Logo.png 2x"
+                                    alt="AlFresco"
+                                    class="lazyload">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                AlFresco
+                            </h3>
+                            <p class="item-folio__cat">
+                                Web Scraping
+                            </p>
+                        </div>
+
+                        <span class="item-folio__caption">
+                            <p>
+                                Inspired by all the ruined outing had, my team and I made a Telegram Bot that one should use before going out. It gives timely updates on the current weather and 
+                                uses web scraping and sentiment analysis algorithms to provide an overall review of the place one intends to head to. <a target="_Blank" rel="noopener"
+                                href="https://hacknroll.jeremycte.com/">Website</a> &
+                                <a target="_Blank" rel="noopener"
+                                href="https://github.com/abhishekjainz/Al-Fresco">Github Code</a>
                             </p>
                         </span>
 
